<!--
  ~ Copyright © 2018 - 2024  Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  -->

<resources>
    <string name="app_name">SPI handler</string>
    <string name="app_title">SPI handler</string>
    <string name="textview">TextView</string>
    <string name="spi_mode">SPI mode</string>
    <string name="mode_0_cpol_0_cpha_0">Mode 0 (CPOL = 0, CPHA = 0)</string>
    <string name="mode_1_cpol_0_cpha_1">Mode 1 (CPOL = 0, CPHA = 1)</string>
    <string name="mode_2_cpol_1_cpha_0">Mode 2 (CPOL = 1, CPHA = 0)</string>
    <string name="mode_3_cpol_1_cpha_1">Mode 3 (CPOL = 1, CPHA = 1)</string>
    <string name="speed_hz">Speed [Hz]</string>
    <string name="set_speed">Set speed</string>
    <string name="bit_justification">Bit justification</string>
    <string name="lsb_first">LSB first</string>
    <string name="msb_first">MSB first</string>
    <string name="bits_per_word">Bits per word</string>
    <string name="set_bpw">set bpw</string>
    <string name="spidev">SPI device:</string>
    <string name="about_text">SPI Android SDK extension example application \n\n
        This application serves as a reference implementation of Kynetics\' SPI Android SDK Extension library. \n\n

        To learn more about SDK Extension licensing please visit:\n
        <a href="https://www.kynetics.com/android-sdk-extensions">https://www.kynetics.com/android-sdk-extensions</a>\n\n

        Application source code is available under Apache v2.0 licence at:\n
        <a href="https://github.com/Kynetics/android-spidev-example-app">https://github.com/Kynetics/android-spidev-example-app</a>\n\n

    </string>
    <string name="about_copyright">Copyright © 2018 – 2024  Kynetics, Inc.</string>
    <string name="menu_about">About</string>
    <string name="menu_restart">restart</string>
</resources>
