<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2018 - 2024  Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:foregroundGravity="fill_vertical"
        android:scrollIndicators="right"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <TableLayout
            android:id="@+id/tableLayout_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#303030">

                <ImageView
                    android:layout_width="93dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/kyn_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-170dp">

                <TextView
                    android:id="@+id/devTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/spidev"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white" />
            </TableRow>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp">

                <TableLayout
                    android:id="@+id/tableLayout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingBottom="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/modeTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/spi_mode"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup
                            android:id="@+id/modeGroup"
                            android:layout_width="368dp"
                            android:layout_height="152dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp">

                            <RadioButton
                                android:id="@+id/modeButton0"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/mode_0_cpol_0_cpha_0"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/modeButton1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/mode_1_cpol_0_cpha_1"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/modeButton2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/mode_2_cpol_1_cpha_0"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/modeButton3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/mode_3_cpol_1_cpha_1"
                                android:textSize="18sp" />

                        </RadioGroup>
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp">

                <TableLayout
                    android:id="@+id/tableLayout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingBottom="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/speedTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:text="@string/speed_hz"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/speedInput"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/speed_hz"
                            android:inputType="numberDecimal"
                            android:maxLength="10"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/speedBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:text="@string/set_speed" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_bpw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp">

                <TableLayout
                    android:id="@+id/tableLayout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingBottom="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/bpwTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/bits_per_word"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/bpwInput"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/bits_per_word"
                            android:inputType="numberDecimal"
                            android:maxLength="3"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/bpwBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:text="@string/set_bpw" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_bjust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp">

                <TableLayout
                    android:id="@+id/tableLayout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingBottom="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/lsbTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/bit_justification"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup
                            android:id="@+id/lsbGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp">

                            <RadioButton
                                android:id="@+id/lsbFirst"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/lsb_first" />

                            <RadioButton
                                android:id="@+id/msbFirst"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/msb_first" />
                        </RadioGroup>
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

        </TableLayout>
    </ScrollView>
</LinearLayout>